--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
+    "start" :"node server.js",
     "dev": "nodemon --exec babel-node server.js"
   },
   "dependencies": {
