--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "a chat application using socket.io",
   "main": "server.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "start" :"node server.js",
