--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon  server.js"
+    "dev": "nodemon --exec babel-node server.js"
   },
   "dependencies": {
     "@babel/cli": "^7.17.6",
